--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
     "name": "verbos-http",
     "version": "0.1.0",
     "private": true,
+    "devDependencies": {},
     "dependencies": {
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "axios": "^0.21.1",
+        "node": "^8.17.0",
+        "node-sass": "4.14.1",
+        "postcss-loader": "^5.3.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
+        "sass-loader": "^11.1.1",
         "web-vitals": "^1.0.1"
     },
     "scripts": {
