--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "axios": "^0.21.1",
+        "bootstrap": "4.6.0",
         "node": "^8.17.0",
         "node-sass": "4.14.1",
         "postcss-loader": "^5.3.0",
         "react": "^17.0.2",
+        "react-bootstrap": "^1.6.0",
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
         "sass-loader": "^11.1.1",
